client_manifests/golang.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus-client-golang
  name: prometheus-client-golang
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: prometheus-client-golang
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prometheus-client-golang
    spec:
      containers:
      - image: localhost:5000/prom_client_golang
        imagePullPolicy: Always
        name: prometheus-client-golang
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    monitoring: prometheus
    app: prometheus-client-golang-svc
  name: prometheus-client-golang-svc
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: prometheus-client-golang
  type: ClusterIP
