client_manifests/ruby.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ruby-client
  name: ruby-client
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ruby-client
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ruby-client
    spec:
      containers:
      - image: localhost:5000/prom_client_ruby
        imagePullPolicy: Always
        name: ruby-client
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    monitoring: prometheus
    app: ruby-client-svc
  name: ruby-client-svc
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
  selector:
    app: ruby-client
  type: ClusterIP
