client_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: alertmanager.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-main 
          servicePort: 9093
  - host: grafana.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
  - host: prometheus.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: 9090
  - host: ruby-client.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-client-ruby-svc
          servicePort: 8000
  - host: golang-client.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-client-golang-svc
          servicePort: 8080
  - host: python-client.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-client-python-svc
          servicePort: 8000
